# kindling

./: .envrc  .gitignore  .mailmap  .markdownlint.json  .oxfmtrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  install.sh  llms.txt  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json
.aps/: config.yml
.aps/backup/: aps-rules.md
.aps/lib/: audit.sh  lint.sh  orchestrate.sh  scaffold.sh
.aps/lib/rules/: common.sh  (+3 more)
.aps/scripts/: check-complete.sh
.claude-plugin/: marketplace.json
.claude/agents/: anvil-plan-spec.md  aps-conductor.md  aps-librarian.md  aps-planner.md  architect.md  autonomous.md  code-reviewer.md  debugger.md  librarian.md  planner.md  security-analyst.md  tdd-coach.md
.claude/commands/: autonomous.md  commit.md  debug.md  delegate.md  negotiate.md  plan.md  review.md  test.md  think-harder.md
.claude/hooks/: council-gate.sh  git-safety.sh  local-review-precommit.sh
.github/: secret_scanning.yml
.github/workflows/: _cross-build.yml  ci.yml  no-ai-trailers.yml  publish.yml  release.yml  rust.yml
.husky/: commit-msg
crates/kindling/: Cargo.toml  README.md
crates/kindling-cli/: Cargo.toml
crates/kindling-cli/src/: cli.rs  lib.rs  main.rs  output.rs
crates/kindling-cli/src/commands/: capsule.rs  export.rs  init.rs  mod.rs  search.rs  serve.rs  status.rs
crates/kindling-cli/tests/: cli.rs  daemon.rs
crates/kindling-cli/tests/support/: mod.rs
crates/kindling-client/: Cargo.toml  README.md
crates/kindling-client/schema/: version.json
crates/kindling-client/src/: body.rs  config.rs  error.rs  lib.rs  spool.rs  transport.rs
crates/kindling-client/tests/: client.rs  spool.rs  spool_support.rs  tcp.rs
crates/kindling-client/tests/support/: mod.rs
crates/kindling-filter/: Cargo.toml
crates/kindling-filter/src/: lib.rs  tools.rs  truncate.rs
crates/kindling-filter/tests/: node_fixtures.rs
crates/kindling-hook/: Cargo.toml
crates/kindling-hook/src/: filter.rs  input.rs  lib.rs  main.rs  mapping.rs  project.rs
crates/kindling-hook/tests/: capture_mapping.rs  e2e.rs
crates/kindling-hook/tests/fixtures/: capture-cases.json
crates/kindling-provider/: Cargo.toml  README.md
crates/kindling-provider/src/: error.rs  lib.rs  orchestrator.rs  provider.rs
crates/kindling-provider/tests/: provider_integration.rs  retrieve_integration.rs  ts_parity.rs
crates/kindling-provider/tests/fixtures/: generate-parity-fixtures.mjs  ts-parity.db  ts-parity.json
crates/kindling-runtime/: Cargo.toml  README.md
crates/kindling-runtime/src/: lib.rs  spawn.rs
crates/kindling-runtime/tests/: runtime.rs
crates/kindling-server/: Cargo.toml  README.md
crates/kindling-server/src/: config.rs  dto.rs  error.rs  handlers.rs  inject.rs  lib.rs  pid.rs  state.rs
crates/kindling-server/tests/: api.rs  idle.rs
crates/kindling-server/tests/support/: mod.rs
crates/kindling-service/: Cargo.toml  README.md
crates/kindling-service/src/: context.rs  error.rs  export.rs  lib.rs  service.rs  validation.rs
crates/kindling-service/src/filter/: mod.rs  paths.rs  secrets.rs  tools.rs
crates/kindling-service/tests/: filter_node_fixtures.rs  service.rs
crates/kindling-service/tests/fixtures/: fixtures.json  generate-fixtures.mjs
crates/kindling-spool/: Cargo.toml
crates/kindling-spool/src/: lib.rs
crates/kindling-spool/tests/: spool.rs
crates/kindling-spool/tests/support/: mod.rs
crates/kindling-store/: Cargo.toml  README.md
crates/kindling-store/schema/: schema.sql
crates/kindling-store/src/: db.rs  error.rs  lib.rs  paths.rs  schema.rs  store.rs
crates/kindling-store/tests/: golden_file.rs  store_integration.rs
crates/kindling-store/tests/fixtures/: generate-golden-db.mjs  ts-golden.db
crates/kindling-types/: Cargo.toml  README.md
crates/kindling-types/bindings/: CandidateResult.ts  Capability.ts  Capsule.ts  CapsuleInput.ts  ListObservationsRequest.ts  ListObservationsResult.ts  Observation.ts  ObservationInput.ts  Pin.ts  PinInput.ts  PinResult.ts  ProviderSearchOptions.ts  ProviderSearchResult.ts  RetrieveOptions.ts  RetrieveProvenance.ts  RetrieveResult.ts  RetrievedEntity.ts  ScopeIds.ts  Summary.ts  SummaryInput.ts  ValidationError.ts
crates/kindling-types/src/: capability.rs  capsule.rs  common.rs  lib.rs  list.rs  observation.rs  pin.rs  redaction.rs  retrieval.rs  summary.rs
crates/kindling-types/tests/: registry.rs  round_trip.rs  ts_export.rs
crates/kindling-types/tests/fixtures/: capsule_closed.json  capsule_open.json  observation_full.json  pin.json  retrieve_result.json  scope_ids_full.json  scope_ids_partial.json  summary.json
crates/kindling/fixtures/: demo-export.json
crates/kindling/src/: cli.rs  lib.rs  main.rs
crates/kindling/src/commands/: browse.rs  capsule.rs  demo.rs  forget.rs  list.rs  log.rs  mod.rs  pin.rs  search.rs  serve.rs  spool.rs  status.rs
crates/kindling/src/hook/: error.rs  input.rs  mapping.rs  mod.rs  project.rs
crates/kindling/tests/: capture_mapping.rs  cli.rs  daemon.rs  e2e.rs  parity.rs  publish_readiness.rs  spool_cli.rs  umbrella.rs
crates/kindling/tests/fixtures/: generate-fixtures.mjs
crates/kindling/tests/support/: mod.rs
docs/: architecture.md  data-model.md  integrations.md  pocketflow-capabilities.md  retrieval-contract.md  use-cases.md
docs/adapters/: cookbook.md
docs/adr/: 0001-keep-sqlite-over-duckdb.md
docs/guides/: branching-strategy.md  release-runbook.md  worktree-policy.md
docs/quickstart/: without-claude-code.md
docs/releases/: v0.3.0.md
docs/research/: atuin-patterns-for-kindling.md
examples/: README.md
examples/adapter-minimal/: README.md  index.ts  package.json  tsconfig.json
fixtures/hook-payloads/: claude-code.json
packaging/: README.md  install.sh
packaging/homebrew/: kindling.rb
packaging/homebrew-tap/: README.md
plans/: index.aps.md  issues.md
schema/: README.md  schema.sql
scripts/: capture-release-evidence.sh  deprecate.sh  generate-homebrew-formula.sh  publish.sh  record-demo.sh  sync-vendored-schema.sh
(+46 files in other folders)
