[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/eddacraft/kindling"
homepage = "https://docs.eddacraft.ai/kindling/overview"
authors = ["aneki <josh@eddacraft.io>"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
