[package]
name = "kindling-cli"
description = "Kindling CLI command implementations (clap) — init, log, capsule open/close, status, search, list, pin, unpin, export, import, serve."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true
