[package]
name = "kindling-cli"
description = "Internal building block of kindling — the `kindling` binary is what you install. CLI command implementations (clap): init, log, capsule open/close, status, search, list, pin, unpin, export, import, serve."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "kindling_cli"
path = "src/lib.rs"

[[bin]]
name = "kindling-cli"
path = "src/main.rs"

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.1.0" }
kindling-store = { path = "../kindling-store", version = "0.1.0" }
kindling-service = { path = "../kindling-service", version = "0.1.0" }
kindling-client = { path = "../kindling-client", version = "0.1.0" }
kindling-server = { path = "../kindling-server", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
# Raw-row reads for `list capsules`/`list observations` reproduce the TS CLI's
# snake_case/raw-string JSON shape; rusqlite is reused from the store stack.
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps export-bundle/JSON key order byte-compatible with TS.
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
kindling-server = { path = "../kindling-server", version = "0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
