[package]
name = "kindling-client"
description = "Rust HTTP-over-UDS client for the Kindling daemon. Auto-spawns the daemon on first call. Used by the hook subcommand and by Anvil for concurrent-safe integration."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true
