[package]
name = "kindling-client"
description = "Rust HTTP-over-UDS client for the Kindling daemon. Auto-spawns the daemon on first call. Used by the hook subcommand and by Anvil for concurrent-safe integration."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.0.1" }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "process"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
kindling-server = { path = "../kindling-server", version = "0.0.1" }
kindling-store = { path = "../kindling-store", version = "0.0.1" }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[lints]
workspace = true
