[package]
name = "kindling-client"
description = "Daemon-backed Rust SDK for kindling, a local-first memory engine for AI-assisted development."
homepage.workspace = true
documentation = "https://docs.rs/kindling-client"
readme = "README.md"
keywords = ["memory", "ai", "context", "sdk", "agent"]
categories = ["development-tools", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.2.0" }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "process"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"], optional = true }

[features]
spool = ["dep:uuid", "tokio/sync"]

# Build docs.rs with every feature so the opt-in `spool` module (SpooledClient)
# appears in the published docs — it is the headline of the 0.2.0 release.
[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
kindling-server = { path = "../kindling-server", version = "0.2.0" }
kindling-store = { path = "../kindling-store", version = "0.2.0" }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[lints]
workspace = true
