[package]
name = "kindling-filter"
description = "Content filtering for observations — secret masking, truncation, excluded-path filtering. Server-side enforcement so consumers cannot bypass."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true
