[package]
name = "kindling-hook"
description = "Claude Code hook handlers for Kindling — thin client to the daemon over UDS. All 7 hook types (session-start, post-tool-use, …) handled via stdin/stdout JSON."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Library (testable dispatch) plus a binary so integration tests can pipe JSON
# through it via CARGO_BIN_EXE_kindling-hook.
[lib]
name = "kindling_hook"
path = "src/lib.rs"

[[bin]]
name = "kindling-hook"
path = "src/main.rs"

[dependencies]
kindling-client = { path = "../kindling-client", version = "0.0.1" }
kindling-types = { path = "../kindling-types", version = "0.0.1" }
tokio = { version = "1", features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-std",
    "io-util",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
# Secret-pattern matching for the adapter filter port (see src/filter.rs). Same
# version kindling-filter pins.
regex = "1"

[dev-dependencies]
kindling-server = { path = "../kindling-server", version = "0.0.1" }
kindling-store = { path = "../kindling-store", version = "0.0.1" }
tempfile = "3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "process",
    "io-util",
] }

[lints]
workspace = true
