[package]
name = "kindling-provider"
description = "Local FTS5 retrieval provider for Kindling — BM25 normalization, tiered retrieval (pins → current summary → ranked candidates)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true
