[package]
name = "kindling-provider"
description = "Local FTS5 retrieval provider for kindling — BM25 normalization, tiered retrieval (pins → current summary → ranked candidates)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
kindling-store = { path = "../kindling-store", version = "0.1.0" }
kindling-types = { path = "../kindling-types", version = "0.1.0" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
