[package]
name = "kindling-provider"
description = "Deterministic local retrieval provider for kindling memory using SQLite FTS."
homepage.workspace = true
documentation = "https://docs.rs/kindling-provider"
readme = "README.md"
keywords = ["search", "memory", "ai", "context", "sqlite"]
categories = ["development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
kindling-store = { path = "../kindling-store", version = "0.3.0" }
kindling-types = { path = "../kindling-types", version = "0.3.0" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
