[package]
name = "kindling-server"
description = "Long-running Kindling daemon — HTTP/1 over Unix domain socket (TCP fallback on Windows). Auto-spawn, idle shutdown, per-project DB routing."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kindling-types = { path = "../kindling-types" }
kindling-store = { path = "../kindling-store" }
kindling-service = { path = "../kindling-service" }
axum = "0.8"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",
] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[lints]
workspace = true
