[package]
name = "kindling-service"
description = "In-process kindling orchestration API — open/close capsule, append observation, retrieve, pin, unpin. Used by the daemon and by direct Rust consumers (anvil, headless workflows)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.1.0" }
kindling-store = { path = "../kindling-store", version = "0.1.0" }
kindling-provider = { path = "../kindling-provider", version = "0.1.0" }
kindling-filter = { path = "../kindling-filter", version = "0.1.0" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps map/struct key order on (de)serialization so exported
# bundles are byte-compatible with the TS `JSON.stringify` field order.
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
