[package]
name = "kindling-service"
description = "In-process (zero-IPC) kindling SDK — open/close capsule, append observation, retrieve, pin, unpin; for single-process Rust consumers (anvil, headless workflows). Most apps want the daemon-backed `kindling-client` instead, which is safe under concurrent access."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.1.0" }
kindling-store = { path = "../kindling-store", version = "0.1.0" }
kindling-provider = { path = "../kindling-provider", version = "0.1.0" }
kindling-filter = { path = "../kindling-filter", version = "0.1.0" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps map/struct key order on (de)serialization so exported
# bundles are byte-compatible with the TS `JSON.stringify` field order.
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
