[package]
name = "kindling-service"
description = "In-process orchestration layer for kindling memory: capsules, observations, retrieval and pins."
homepage.workspace = true
documentation = "https://docs.rs/kindling-service"
readme = "README.md"
keywords = ["memory", "ai", "context", "agent", "sqlite"]
categories = ["development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.3.0" }
kindling-store = { path = "../kindling-store", version = "0.3.0" }
kindling-provider = { path = "../kindling-provider", version = "0.3.0" }
thiserror = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps map/struct key order on (de)serialization so exported
# bundles are byte-compatible with the TS `JSON.stringify` field order.
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
