[package]
name = "kindling-store"
description = "SQLite persistence for Kindling against schema/schema.sql — rusqlite (bundled), FTS5, WAL mode, per-project DB isolation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
kindling-types = { path = "../kindling-types" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
