[package]
name = "kindling-store"
description = "SQLite persistence for Kindling against schema/schema.sql — rusqlite (bundled), FTS5, WAL mode, per-project DB isolation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.1.0" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
