[package]
name = "kindling-store"
description = "SQLite persistence layer for kindling, including capsules, observations, summaries, pins and FTS indexes."
homepage.workspace = true
documentation = "https://docs.rs/kindling-store"
readme = "README.md"
keywords = ["sqlite", "memory", "ai", "context", "fts"]
categories = ["database", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.1.0" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
