[package]
name = "kindling-types"
description = "Internal building block of kindling — these types are re-exported by the `kindling-client` SDK, so depend on that, not this crate directly. Canonical domain types (observations, capsules, retrieval); ts-rs derives generate the TypeScript projection."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Enable ts-rs derives so `cargo test --features ts-rs` writes the TypeScript
# projection of every public type into `bindings/`. Off by default to keep the
# crate's normal compile cheap and free of dev-only dependencies.
ts-rs = ["dep:ts-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ts-rs = { version = "11", optional = true, features = ["serde-json-impl"] }
