[package]
name = "kindling"
description = "Kindling — local memory and continuity engine for AI-assisted development. Single-binary entry point dispatching to serve / hook / CLI subcommands."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage = "https://github.com/eddacraft/kindling"
keywords = ["memory", "ai", "context", "sqlite", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kindling"
path = "src/main.rs"

[dependencies]
# The umbrella reuses the CLI's clap dispatch and the hook's self-contained
# `run_hook` (which owns its own current-thread Tokio runtime). The umbrella
# `main` is a plain `fn main() -> ExitCode` — no second Tokio runtime macro.
kindling-cli = { path = "../kindling-cli", version = "0.1.0" }
kindling-hook = { path = "../kindling-hook", version = "0.1.0" }

[dev-dependencies]
kindling-server = { path = "../kindling-server", version = "0.1.0" }
kindling-store = { path = "../kindling-store", version = "0.1.0" }
kindling-types = { path = "../kindling-types", version = "0.1.0" }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[lints]
workspace = true
