[package]
name = "kindling"
description = "kindling — local memory and continuity engine for AI-assisted development. Single-binary entry point dispatching to serve / hook / CLI subcommands."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage = "https://github.com/eddacraft/kindling"
keywords = ["memory", "ai", "context", "sqlite", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "kindling"
path = "src/lib.rs"

[[bin]]
name = "kindling"
path = "src/main.rs"

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.1.0" }
kindling-store = { path = "../kindling-store", version = "0.1.0" }
kindling-service = { path = "../kindling-service", version = "0.1.0" }
kindling-client = { path = "../kindling-client", version = "0.1.0" }
kindling-server = { path = "../kindling-server", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-std", "io-util"] }
thiserror = "2"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "process", "io-util"] }

[lints]
workspace = true
