[package]
# Published as `eddacraft-kindling` because the bare `kindling` name on
# crates.io belongs to an unrelated crate. The installed binary is still
# `kindling` (see [[bin]] below); `cargo install eddacraft-kindling`.
name = "eddacraft-kindling"
description = "Local-first memory and continuity CLI for AI-assisted development (the `kindling` binary)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/eddacraft-kindling"
readme = "README.md"
keywords = ["memory", "ai", "context", "sqlite", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "kindling"
path = "src/lib.rs"

[[bin]]
name = "kindling"
path = "src/main.rs"

[dependencies]
kindling-types = { path = "../kindling-types", version = "0.2.0" }
kindling-store = { path = "../kindling-store", version = "0.2.0" }
kindling-service = { path = "../kindling-service", version = "0.2.0" }
kindling-client = { path = "../kindling-client", version = "0.2.0" }
kindling-server = { path = "../kindling-server", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-std", "io-util"] }
thiserror = "2"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "process", "io-util"] }

[lints]
workspace = true
